--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,8 +5,12 @@ name: CH2 flows
 
 on:
   push:
+    paths:
+      - 'Ch2/**'
     branches: [ "main" ]
   pull_request:
+    paths:
+        - 'Ch2/**'
     branches: [ "main" ]
 
 permissions:
@@ -16,6 +20,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./Ch2
 
     steps:
     - uses: actions/checkout@v4
@@ -23,9 +30,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Navigate to folder
-      run: |
-        cd ./Ch2
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
