--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,4 +47,4 @@ jobs:
       uses: mikepenz/action-junit-report@v5
       if: success() || failure()
       with:
-        report_paths: '**/build/test-results/test/TEST-*.xml'
+        report_paths: '**/*.xml'
